# castopost

./: CMakeLists.txt  README.md  install.sh  uninstall.sh
qml/: Main.qml
qml/components/: AudioRecorderWidget.qml  EpisodeCard.qml  PodcastSwitcher.qml  SideBar.qml  StatusBanner.qml  TemplatePickerDialog.qml  Theme.qml
qml/pages/: DashboardPage.qml  DraftsPage.qml  PodcastsPage.qml  PublishPage.qml  SettingsPage.qml  TemplatesPage.qml
src/: main.cpp
src/api/: ApiTypes.h  CastopodClient.cpp  CastopodClient.h
src/app/: AppController.cpp  AppController.h
src/audio/: AudioProcessor.cpp  AudioProcessor.h  AudioRecorder.cpp  AudioRecorder.h
src/store/: DraftStore.cpp  DraftStore.h  PodcastStore.cpp  PodcastStore.h  TemplateStore.cpp  TemplateStore.h
